--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@
 
 
 <!--Scripts-->
+<script src="./js/lazy.js"></script>
 <script src="./js/jquery-2.1.0.js"></script>
 <script src="./js/bootstrap.js"></script>
 <script src="./js/blocs.js"></script>
