search console tag

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <title>.</title>
 
     
-<!-- Analytics -->
- 
+<!-- Analytics /Search Console-->
+<meta name="google-site-verification" content="xgdTGF2xefXn1HBorhYvExN-f6vz-HdPOdk8xr13u_Q" />
 <!-- Analytics END -->
     
 </head>
