meta title et description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-    <meta name="description" content="">
+   <meta name="title" content="Entreprise web design Lyon - La Panthère">
+	<meta name="description" content="La Panthère, une agence de conception de sites Web et de design établie à Lyon, fournit des services aux entreprises à Lyon et à l'international.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
