--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web lyon, web design lyon, stratégie web" class="lazy" data-src="img/title.png" />
+				<img alt="agence web, agence web lyon, web design lyon, stratégie web" src="img/title.png" />
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -130,7 +130,7 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="agence web, agence web lyon, web design lyon, stratégie web" class="lazy" data-src="img/citation.webp" />
+				<img alt="agence web, agence web lyon, web design lyon, stratégie web" src="img/citation.webp" />
 
 			</div>
 		</div>
