--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+
+	<link rel="preload" type="text/css" href="./css/bootstrap.css" as="style">
+	<link rel="preload" type="text/css" href="style.css" as="style">
 	<link rel="preload" as="font" type="text/css" href="./css/font-awesome.css&display=swap"> 
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+	<link rel="preload" type="text/css" href="./css/et-line.css" as="style">
 	
     
 
