--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 
-	<link rel="preload" type="text/css" href="./css/bootstrap.css" as="style">
-	<link rel="preload" type="text/css" href="style.css" as="style">
+	<link rel="preload" as="style" type="text/css" href="./css/bootstrap.css">
+	<link rel="preload"  as="style" type="text/css" href="style.css">
 	<link rel="preload" as="font" type="text/css" href="./css/font-awesome.css&display=swap"> 
-	<link rel="preload" type="text/css" href="./css/et-line.css" as="style">
+	<link rel="preload"  as="style" type="text/css" href="./css/et-line.css">
 	
     
+
 
 
     <title>Entreprise web design Lyon - La Panthère</title>
