--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
-
-	<link rel="preload" as="style" type="text/css" href="./css/bootstrap.css">
-	<link rel="preload"  as="style" type="text/css" href="style.css">
+	
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="preload" as="font" type="text/css" href="./css/font-awesome.css&display=swap"> 
-	<link rel="preload"  as="style" type="text/css" href="./css/et-line.css">
+	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
     
-
 
 
     <title>Entreprise web design Lyon - La Panthère</title>
