--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+
+
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="preload" as="font" type="text/css" href="./css/font-awesome.css&display=swap"> 
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-	
+	<link rel="preload" href="./css/bootstrap.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<noscript><link rel="stylesheet" href="./css/bootstrap.css"></noscript>
     
 
 
@@ -52,7 +54,7 @@
 					<li>
 					</li>
 					<li>
-						<a href="page2.html">Contact</a>
+						<a href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -71,7 +73,7 @@
 					Agence La Panthère
 				</h1>
 				<div class="text-center">
-					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 				</div>
 			</div>
 		</div>
@@ -250,7 +252,7 @@
 				</div>
 				<div class="row">
 					<div class="col-sm-4">
-					<h1> Partenaires</h1>
+					<h3> Partenaires</h3>
 							<ul>
 								<li><a href="voiture.com">voiture.com</a></li>
 								<li><a href="pizza.com">pizza.com</a></li>
@@ -259,7 +261,7 @@
 							</ul>		
 					</div>
 					<div class="col-sm-4">
-						<h1>	Annuaires liste 1</h1>
+						<h3>	Annuaires liste 1</h3>
 						<ul>
 							<li><a href="annuaireagence.com">annuaireagence.com</a></li>
 							<li><a href="annuaireseo.com">annuaireseo.com</a></li>
@@ -273,7 +275,7 @@
 						</ul>
 					</div>
 					<div class="col-sm-4">
-						<h1>	Annuaires liste 2</h1>
+						<h3>	Annuaires liste 2</h3>
 						<ul>
 							<li><a href="betterseo.com">betterseo.com</a></li>
 							<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
