--- a/page2.html
+++ b/page2.html
@@ -14,7 +14,7 @@
 	
     
 
-    <title>page2</title>
+    <title>Contact</title>
 
     
 <!-- Analytics -->
@@ -44,7 +44,7 @@
 					<li>
 					</li>
 					<li>
-						<a href="page2.html">page2 &gt;</a>
+						<a href="contact.html">page2 &gt;</a>
 					</li>
 				</ul>
 			</div>
