--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
     
 	
 
-
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="preload" as="font" type="text/css" href="./css/font-awesome.css&display=swap"> 
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-	<link rel="preload" href="./css/bootstrap.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link rel="stylesheet" href="./css/bootstrap.css"></noscript>
+	<link rel="stylesheet" type="text/css" href="./css/et-line.css">	
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
     
 
 
