--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	
-
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="preload" as="font" type="text/css" href="./css/font-awesome.css&display=swap"> 
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">	
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+	
     
 
 
@@ -249,8 +249,8 @@
 					<div class="keywords" style="color:#F3976C;">Entreprise web design Lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				</div>
 				<div class="row">
-					<div class="col-sm-4">
-					<h3> Partenaires</h3>
+					<div class="col-sm-4 footer-col">
+					<h1> Partenaires</h1>
 							<ul>
 								<li><a href="voiture.com">voiture.com</a></li>
 								<li><a href="pizza.com">pizza.com</a></li>
@@ -258,8 +258,8 @@
 								<li><a href="immobilierseo.com">immobilierseo.com</a></li>
 							</ul>		
 					</div>
-					<div class="col-sm-4">
-						<h3>	Annuaires liste 1</h3>
+					<div class="col-sm-4 footer-col">
+						<h1>	Annuaires liste 1</h1>
 						<ul>
 							<li><a href="annuaireagence.com">annuaireagence.com</a></li>
 							<li><a href="annuaireseo.com">annuaireseo.com</a></li>
@@ -272,8 +272,8 @@
 							<li><a href="listeseo.com">listeseo.com</a></li>
 						</ul>
 					</div>
-					<div class="col-sm-4">
-						<h3>	Annuaires liste 2</h3>
+					<div class="col-sm-4 footer-col">
+						<h1>	Annuaires liste 2</h1>
 						<ul>
 							<li><a href="betterseo.com">betterseo.com</a></li>
 							<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
