--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
+				<h1 class="text-center white font-27">
 					Agence La Panthère - Agence web basée à Lyon.<br>
-				</p>
+				</h1>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
