--- a/page2.html
+++ b/page2.html
@@ -44,7 +44,7 @@
 					<li>
 					</li>
 					<li>
-						<a href="contact.html">page2 &gt;</a>
+						<a href="contact.html">page2</a>
 					</li>
 				</ul>
 			</div>
