--- a/contact.html
+++ b/contact.html
@@ -26,12 +26,16 @@
 <!-- Principal conteneur -->
 <div class="page-container">
     
+    
 <!-- bloc-0 -->
 <div class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
+
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="atlanta web design logo" height="40" /></a>
+				<div class="keywords" style="color:#cccccc;font-size:1px;">Entreprise web design Lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="lyon web design logo agence web meilleure agence" height="40" /></a>
+				<div class="keywords" style="color:#cccccc;font-size:1px;">Entreprise web design Lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -44,7 +48,7 @@
 					<li>
 					</li>
 					<li>
-						<a href="contact.html">page2</a>
+						<a href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
